@@ -4,8 +4,8 @@ US_gas_giant,PLANET,cat_giant,10,2,100,,,,,0.95,2,4,250,400,150 230 230,255 255 
 US_gas_giantB,PLANET,cat_giant,10,0,100,-10,,,,0.95,2,4,250,400,180 160 150,255 255 255,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
 ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
 #Hot,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
-US_lava,PLANET,cat_lava,10,-100,-2,2,,-1,around_giant_at_any_offset,0,,,100,150,220 220 220,255 255 255,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
-US_volcanic,PLANET,cat_lava,10,-2,0,2,,-1,around_giant_at_any_offset,0,,,100,150,220 220 220,255 255 255,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
+US_lava,PLANET,cat_lava,0,-100,-2,2,,-1,around_giant_at_any_offset,0,,,100,150,220 220 220,255 255 255,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
+US_volcanic,PLANET,cat_lava,0,-2,0,2,,-1,around_giant_at_any_offset,0,,,100,150,220 220 220,255 255 255,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
 ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
 #Cold,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
 US_blue,PLANET,cat_cryovolcanic,10,2,100,,,,,0.1,1,1,130,220,200 220 230,255 255 255,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
